# learning_spider

./: .gitignore  Daily_stack_info.py  README.md  cars_data.csv  cars_data1.csv  data_analyze.py  dongchedi_newcars.csv  douban_spider.py  download_Baidu_TieBa_img.py  download_wall_paper.py  get_BaiduNews.py  get_Beijing_new_prices.py  get_photo_word.py  get_ptpress.py  get_video.py  learn_request_html.py  main.py  package-lock.json  post_login.py  pyproject.toml  selenium-demo.py  selenium-taobao.py  temp.py  tushare_API.py  youdao.py
bg_remove/: plan.md  start_app.bat  start_app.sh
bg_remove/backend/: app.py  requirements.txt
bg_remove/frontend/: package-lock.json  package.json
config/: README.md
db/: check_db_data.py  config.py
docs/: README.md
flask/: Dockerfile  Jenkinsfile  weather_api.py
img_remove/backend/: app.py
img_remove/frontend/: package.json
requests/: api_test.py  dongchedi_newcars.json  douban_spider.py  get_BaiduNews.py  get_Beijing_new_prices.py  get_autohome_info.py  get_car_ranking.py  get_dcd_info.py  get_phone_info.py  get_ptpress.py  get_video.py  get_weather.py  post_login.py  save_dcd_new_car.py  test.py  youdao.py
requests/history/: Daily_stack_info.py
requests_html/: get_baike.py  get_content_api.py
scripts/: README.md
selenium/: get_api_info.py  get_dcd_info.py  get_news_api.py  get_toutiao.py  remote_selenium.py  test_api.py
src/: data_analyze.py  get_photo_word.py  tushare_API.py
src/bg_remove/: README.md  restart.sh
src/db/: save_to_mysql.py  test.txt
src/utils/: README.md  (+1 more)
taobao/: 电磁炉炒锅.csv
(+24 files in other folders)
