[project]
name = "learning-spider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.1",
    "pymysql>=1.1.1",
    "selenium>=4.34.2",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple"
default = true
